<resources>
    <string name="app_name">Museum</string>
    <string name="title_activity_login">Вход</string>
    <string name="comments">Комментарии</string>
    <string name="write_comment">Напишите комментарий</string>
    <string name="exhibitions">Выставки</string>
    <string name="museums">Музеи</string>
    <string name="authors">Авторы</string>
    <string name="showpieces">Экспонаты</string>

    <string name="ru_lang">RU</string>
    <string name="en_lang">EN</string>
    <string name="ger_lang">GE</string>

    <string name="show"><![CDATA[>>]]></string>

    <string name="description_ru">Описание</string>
    <string name="description_en">Description</string>
    <string name="description_ge">Beschreibung</string>

    <string name="show_more">Show more</string>
    <string name="less">Less</string>

    <string name="see_comment_ru">Посмотреть комментарии</string>
    <string name="see_comment_en">See comment</string>
    <string name="see_comment_ge">Kommentare anzeigen</string>

    <string name="show_showpieces_ru">Посмотреть экспонаты</string>
    <string name="show_showpieces_en">Show showpieces</string>
    <string name="show_showpieces_ge">Exponate anzeigen</string>
    <string name="change_name">Изменить имя</string>
    <string name="change_password">Изменить пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="exit">Выход</string>
    <string name="changing_password">Изменение пароля</string>

    <string name="enter">Вход</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Регистрация</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_action">Панель администратора</string>
    <string name="museum_info_edit">Редактировать информацию о музее</string>
    <string name="museum_delete">Удалить музей</string>
    <string name="show_exhibitions">Посмотреть выставки</string>

    <string name="action_mode_clear">Clear</string>
    <string name="action_mode_select">Select</string>
    <string name="admin_museum">Управление музеями</string>
    <string name="admin_showpieces">Управление экспонатами</string>
    <string name="admin_authors">Управление авторами</string>
    <string name="title_activity_nfc">NFCActivity</string>

</resources>
