<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/showpiece_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mona_lisa" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_rus"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/ru_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_eng"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginEnd="40dp"
                android:text="@string/en_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_ger"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:text="@string/ger_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/line"
            android:shrinkColumns="*">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/showpiece_title"
                        android:layout_width="400dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="Мона Лиза"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ToggleButton
                        android:id="@+id/button_favorite"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/button_favorite"
                        android:checked="false"
                        android:gravity="end|bottom"
                        android:text=""
                        android:textOff=""
                        android:textOn="" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/see_author"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/showpiece_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp"
                        android:text="Иван Иванов"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:gravity="right|center"
                        android:text="@string/show"
                        android:textColor="@color/black" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/showpiece_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="1505 год"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/description_ru"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/showpiece_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp"
                        android:text="Полное название картины итал. Ritratto di Mona Lisa del Giocondo — «Портрет госпожи Лизы Джокондо». По-итальянски ma donna значит «моя госпожа» , в сокращённом варианте это выражение преобразовалось в monna или mona. Вторая часть имени модели, считающаяся фамилией её мужа — del Giocondo, по-итальянски также имеет прямое значение и переводится как «весёлый, играющий» и соответственно la Gioconda — «весёлая, играющая» ."
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/btn_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/show_more"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/btn_less"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/less"
                            android:textColor="@color/colorAccent"
                            android:visibility="gone" />
                    </LinearLayout>


                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/see_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/see_comment_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/see_comment_ru"
                        android:textColor="@drawable/button_text_color"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        app:backgroundTint="#00000000"
                        app:cornerRadius="18dp"
                        app:rippleColor="@color/colorAccent"
                        app:strokeColor="@color/darkGrey"
                        app:strokeWidth="1dp"/>

            </TableRow>

        </TableLayout>
    </LinearLayout>

</ScrollView>