<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    
    <Button
        android:id="@+id/load_image_showpiece"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Загрузить фото экспоната"
        android:layout_marginTop="30dp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/year_showpiece"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/year_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Год создания экспоната"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_showpiece"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выберите язык и добавьте информацию об экспонате"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_rus"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:text="@string/ru_lang"
            android:textAlignment="center"
            android:textColor="@drawable/button_text_color"
            android:textSize="12sp"
            app:backgroundTint="#00000000"
            app:cornerRadius="18dp"
            app:rippleColor="@color/colorAccent"
            app:strokeColor="@color/darkGrey"
            app:strokeWidth="1dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_eng"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:text="@string/en_lang"
            android:textAlignment="center"
            android:textColor="@drawable/button_text_color"
            android:textSize="12sp"
            app:backgroundTint="#00000000"
            app:cornerRadius="18dp"
            app:rippleColor="@color/colorAccent"
            app:strokeColor="@color/darkGrey"
            app:strokeWidth="1dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_ger"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:text="@string/ger_lang"
            android:textAlignment="center"
            android:textColor="@drawable/button_text_color"
            android:textSize="12sp"
            app:backgroundTint="#00000000"
            app:cornerRadius="18dp"
            app:rippleColor="@color/colorAccent"
            app:strokeColor="@color/darkGrey"
            app:strokeWidth="1dp" />

    </LinearLayout>

</LinearLayout>