<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/admin_museum_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:src="@drawable/cleveland_museum" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/line"
        android:shrinkColumns="*">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="1dp"
            android:background="?android:colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">


            <TextView
                android:id="@+id/admin_museum_title"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Название музея"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/admin_museum_address"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Адрес музея"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>
        </TableRow>



        <TableRow
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:background="?android:colorBackground"
            android:baselineAligned="false">

                <TextView
                    android:id="@+id/admin_museum_exhibition"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/show_exhibitions"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:background="?android:colorBackground"
            android:baselineAligned="false">

                <TextView
                    android:id="@+id/admin_museum_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/museum_info_edit"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
        </TableRow>

        <TableRow
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:background="?android:colorBackground"
            android:baselineAligned="false">

                <TextView
                    android:id="@+id/admin_museum_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/museum_delete"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

        </TableRow>
    </TableLayout>
    </LinearLayout>
</ScrollView>