<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/author_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/van_gogh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingStart="40dp"
            android:paddingTop="10dp">

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_rus"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginEnd="40dp"
                android:text="@string/ru_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_eng"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:layout_marginEnd="40dp"
                android:text="@string/en_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/btn_ger"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="45dp"
                android:text="@string/ger_lang"
                android:textAlignment="center"
                android:textColor="@drawable/button_text_color"
                android:textSize="12sp"
                app:backgroundTint="#00000000"
                app:cornerRadius="18dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/darkGrey"
                app:strokeWidth="1dp" />
        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/line"
            android:shrinkColumns="*">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="Винсент Ван Гог"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/author_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="1853 - 1890"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/description_ru"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/author_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:paddingBottom="5dp"
                        android:paddingTop="10dp"
                        android:text="Нидерландский художник-постимпрессионист, чьи работы оказали вневременное влияние на живопись XX века. За десять с небольшим лет он создал более 2100 произведений, включая около 860 картин маслом. Среди них — портреты, автопортреты, пейзажи и натюрморты, с изображением оливковых деревьев, кипарисов, полей пшеницы и подсолнухов. Большинство критиков не замечало Ван Гога до его самоубийства в возрасте 37 лет, которому предшествовали годы тревог, нищеты и расстройств рассудка."
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingBottom="10dp">

                        <TextView
                            android:id="@+id/btn_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/show_more"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/btn_less"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/less"
                            android:textColor="@color/colorAccent"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/edit_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="Редактировать информацию об авторе"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="?android:colorBackground"
                android:baselineAligned="false">

                <TextView
                    android:id="@+id/delete_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="Удалить автора"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>